--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jshint": "^2.7.0",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.10"
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.12.1"
   }
 }
