--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jshint": "^2.7.0",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^0.5.2",
+    "strip-loader": "^0.1.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.12.1"
   }
